Praticando, CSS  e adicionamento do reset CSS

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Git e GitHub</title>
+  <title>Ainda estou aprendendo</title>
+  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Hello World</h1>
+  <header>
+    <h1>Hello, Kenzie</h1>
+  </header>
+
+  <main>
+    <section>
+      <article>
+        <h2>Hello, Kenzie</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere excepturi, perferendis omnis earum maxime saepe repellendus dicta ab odio veritatis debitis a quo, deleniti voluptates eos eaque sunt, dolorem tempora!</p>
+      </article>
+    </section>
+  </main>
 </body>
 </html>
