--- a/index.html
+++ b/index.html
@@ -1,24 +1,52 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Rubik+Mono+One&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ainda estou aprendendo</title>
+  <title>Paragraph</title>
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <header>
-    <h1>Hello, Kenzie</h1>
-  </header>
+  <!-- Atividade: Trabalhando com textos -->
+  <article>
+    <h1 class="titulo-principal">James Webb <div>Telescópio Espacial</div></h1>
 
-  <main>
-    <section>
-      <article>
-        <h2>Hello, Kenzie</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere excepturi, perferendis omnis earum maxime saepe repellendus dicta ab odio veritatis debitis a quo, deleniti voluptates eos eaque sunt, dolorem tempora!</p>
-      </article>
-    </section>
-  </main>
+    <h2 class="titulo-secundario">
+      25/05/2023:
+      <span class="span-titulo-secundario">
+        Nasa combina imagens dos telescópios Chandra e Webb obtendo visões impressionantes
+      </span>
+    </h2>
+
+    <p class="paragrafo-titulo">
+      Quatro imagens compostas do Observatório de Raios-X Chandra e do Telescópio Espacial James Webb oferecem vistas deslumbrantes de duas galáxias, uma nebulosa e um aglomerado de estrelas. Cada imagem combina os raios X do Chandra – uma forma de luz de alta energia – com dados
+      infravermelhos de imagens do Webb lançadas anteriormente, ambas invisíveis a olho nu. Dados do Telescópio Espacial Hubble da NASA (luz óptica) e do atualmente desativado Telescópio Espacial Spitzer (infravermelho), além do XMM-Newton (raios-X) da Agência Espacial Européia e do Telescópio de Nova Tecnologia do Observatório Europeu do Sul (óptico) também foram usados. Essas maravilhas e detalhes cósmicos são disponibilizados mapeando os dados e transformando-os em cores que os olhos humanos podem perceber.
+    </p>
+
+    <a 
+      href="https://webb.nasa.gov/content/webbLaunch/assets/images/images2023/may-23-23-chandraAndfWebb4PanelLabelled-1k.jpg" 
+      alt="Para abrir em outra aba as 4 imagens capturadas pelos telescópios" target="_blank"
+    >
+      <img
+        src="https://media.graphassets.com/wDQW27gRQqS0VTJytBV2"
+        alt="Quatro imagens capturadas pelos telescópios James Webb e Chandra"
+      />
+    </a>
+
+    <div>
+      <cite>
+        Fonte:
+        <a
+        href="https://www.nasa.gov/mission_pages/chandra/news/nasas-chandra-webb-combine-for-arresting-views.html"
+        target="_blank"
+        >https://webb.nasa.gov/
+        </a>
+      </cite>
+    </div>
+  </article>
 </body>
 </html>
